<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/memory_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/memory_screen_text_size"
        app:layout_constraintBottom_toTopOf="@id/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_text_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_screen_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_text_text_view" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_7"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="@+id/main_screen"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_8"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_9"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_erase"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="clear"
        android:text="@string/button_erase"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_4"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="@+id/main_screen"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_5"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_6"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_multiply"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_divide"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_1"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="@+id/main_screen"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_2"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_3"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_plus_height"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_plus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_minus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_plus"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_equal"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/main_screen"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="81dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/button_margin"
        android:onClick="press"
        android:text="@string/button_0"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/main_screen"
        app:layout_constraintStart_toEndOf="@id/button_plus"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/settings"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_equal" />


</androidx.constraintlayout.widget.ConstraintLayout>